--- a/views/manageGridPage.html
+++ b/views/manageGridPage.html
@@ -4,7 +4,7 @@
   <div class="apos-manage-grid-piece" data-focus-{{ piece.type }} data-edit-dbl-{{ data.options.name | css }}="{{ piece._id }}" data-piece="{{ piece._id }}">
     <div class="apos-manage-grid-image">
       <svg>
-        <use xlink:href="{{ piece.map }}#{{ piece.id }}"></use>
+        <use xlink:href="{{ piece.file }}#{{ piece.id }}"></use>
       </svg>
       <div class="apos-image-screen"></div>
       <div class="apos-manage-grid-piece-controls">
