update the view regarding the recent changes from stuart

--- a/lib/modules/apostrophe-svg-sprites-widgets/views/widget.html
+++ b/lib/modules/apostrophe-svg-sprites-widgets/views/widget.html
@@ -1,7 +1,7 @@
 <div class="apos-svg-sprite-widget">
   {% for svg in data.widget._pieces %}
     <svg>
-      <use xlink:href="{{ svg.map }}#{{ svg.id }}"></use>
+      <use xlink:href="{{ svg.file }}#{{ svg.id }}"></use>
     </svg>
   {% endfor %}
 </div>
