update chooserChoice.html too

--- a/views/chooserChoice.html
+++ b/views/chooserChoice.html
@@ -1,5 +1,5 @@
 <div class="apos-images-chooser-choice apos-images-chooser-choice--svg-sprites">
   <svg>
-    <use xlink:href="{{ choice.map }}#{{ choice.id }}"></use>
+    <use xlink:href="{{ choice.file }}#{{ choice.id }}"></use>
   </svg>
 </div>
